# imap-mcp-server

./: README.md  gmail_auth.py  gmail_auth_client.py  gmail_auth_server.py  mcp-server.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
