[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imap-mcp-server"
readme = "README.md"
version = "0.1.0"
description = "Minimal MCP server that bridges an MCP-capable agent to an IMAP mailbox."
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Laurent Vivier" }, { email = "laurent@vivier.eu" }]

[project.urls]
Homepage = "https://github.com/vivier/imap-mcp-server"

dependencies = [
  "fastmcp",
  "imap-tools",
  "python-dotenv",
]
